// Copyright Â© 2019 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "github.com/TheThingsIndustries/protoc-gen-go-json/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "lorawan-stack/api/end_device.proto";
import "lorawan-stack/api/picture.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/v3/pkg/ttnpb";

// TODO: Migrate away from GoGo Protobuf (https://github.com/TheThingsNetwork/lorawan-stack/issues/2798).
option (gogoproto.goproto_registration) = true;

message QRCodeFormat {
  string name = 1 [(validate.rules).string.max_len = 100];
  string description = 2 [(validate.rules).string.max_len = 200];
  // The entity fields required to generate the QR code.
  google.protobuf.FieldMask field_mask = 3;
}

message QRCodeFormats {
  // Available formats. The map key is the format identifier.
  map<string, QRCodeFormat> formats = 1 [(validate.rules).map.keys.string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$", max_len: 36}];
}

message GetQRCodeFormatRequest {
  // QR code format identifier. Enumerate available formats with rpc ListFormats in the EndDeviceQRCodeGenerator service.
  string format_id = 1 [(validate.rules).string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$", max_len: 36}];
}

message GenerateEndDeviceQRCodeRequest {
  // QR code format identifier. Enumerate available formats with rpc ListFormats in the EndDeviceQRCodeGenerator service.
  string format_id = 1 [(validate.rules).string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9]){2,}$", max_len: 36}];
  // End device to use as input to generate the QR code.
  EndDevice end_device = 2 [(validate.rules).message.required = true];

  message Image {
    // Requested QR code image dimension in pixels.
    uint32 image_size = 1 [(validate.rules).uint32 = {gte: 10, lte: 1000}];
  }
  // If set, the server will render the QR code image according to these settings.
  Image image = 3;
}

message GenerateQRCodeResponse {
  // Text representation of the QR code contents.
  string text = 1;
  // QR code in PNG format, if requested.
  Picture image = 2;
}

service EndDeviceQRCodeGenerator {
  // Return the QR code format.
  rpc GetFormat(GetQRCodeFormatRequest) returns (QRCodeFormat) {
    option (google.api.http) = {
      get: "/qr-codes/end-devices/formats/{format_id}"
    };
  };

  // Returns the supported formats.
  rpc ListFormats(google.protobuf.Empty) returns (QRCodeFormats) {
    option (google.api.http) = {
      get: "/qr-codes/end-devices/formats"
    };
  };

  // Generates a QR code.
  rpc Generate(GenerateEndDeviceQRCodeRequest) returns (GenerateQRCodeResponse) {
    option (google.api.http) = {
      post: "/qr-codes/end-devices",
      body: "*"
    };
  };
}

// LoRaAllianceTR005 is the LoRa Alliance defined format in Technical Recommendation TR005.
// See https://lora-alliance.org/wp-content/uploads/2020/11/TR005_LoRaWAN_Device_Identification_QR_Codes.pdf
message LoRaAllianceTR005EndDevice {
  bytes schema_id = 1;
	bytes join_eui = 2 [(gogoproto.customtype) = "go.thethings.network/lorawan-stack/v3/pkg/types.EUI64"];
  bytes dev_eui = 3 [(gogoproto.customtype) = "go.thethings.network/lorawan-stack/v3/pkg/types.EUI64"];
	bytes vendor_id = 4 ;
  // model_id is referred to as VendorProfileID in TR005.
  bytes model_id = 5 ;
  // The following are optional fields.
  string checksum = 6;
  string owner_token = 7;
  string serial_number = 8;
  string proprietary = 9;
}

// The type of entity that's being onboarded.
enum OnboardingEntityType {
  option (thethings.json.enum) = { marshal_as_string: true};

  // LoRaWAN End Device.
  END_DEVICE = 0;
}

message OnboardingEntityData {
  oneof data {
    option (validate.required) = true;
    LoRaAllianceTR005EndDevice la_tr005_end_device = 1;
  }
}

message ParseQRCodeRequest {
  // QR code format identifier. Enumerate available formats with rpc ListFormats in the EndDeviceQRCodeGenerator service.
  string format_id = 1 [(validate.rules).string = {pattern: "^[a-z0-9](?:[-]?[a-z0-9])$", max_len: 36}];
  // Entity type for which the QR Code is being generated. Ex: `enddevice`.
  OnboardingEntityType entity_type = 2 [(validate.rules).enum.defined_only = true];
  // Raw QR code contents.
  bytes qr_code = 3 [(validate.rules).bytes = {min_len: 0, max_len: 1024}];
}

message ParseQRCodeResponse {
  // QR code format identifier that was used to parse the QR Code.
  string format_id = 1;
  OnboardingEntityData onboarding_entity_data = 2;
}

service QRCodeParser {
  // Parse QR Codes of known formats and return the information contained within.
  rpc Parse(ParseQRCodeRequest) returns (ParseQRCodeResponse){
    option (google.api.http) = {
      post: "/qr-codes",
      body: "*"
    };
  }
}
